--- a/terrace.html
+++ b/terrace.html
@@ -48,22 +48,18 @@
         </Header>
         <section id="section">
             <div id="main">
-                <div class="topimg">
-                    <img src="img/photo2sm.jpg" alt="">
-                    <div class="toptit">
-                        <h2>Rooms</h2>
-                        <p>더 안전하고 행복한 여행을 함께하겠습니다.</p>
-                    </div>
+                <div class="toptitr">
+                    <h2>Terrace sweet</h2>
                 </div>
                 <div id="rocont">
-                    <div class="roomlist">
+                    <!-- <div class="roomlist">
                         <a href="stand.html">Standard</a>
                         <a href="prem.html">Premier</a>
                         <a href="prempc.html">Premier-2PC</a>
                         <a href="sweet.html">Sweet</a>
                         <a href="#" class="it">Terrace sweet</a>
                         <a href="party.html">Party Room</a>
-                    </div>
+                    </div> -->
                     <div class="rooms">
                         <div class="terra">
                             <div class="slide_group2">
