--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                             </a>
                         </li>
                         <li class="aboutbox">
-                            <a href="rooms.html">
+                            <a href="stand.html">
                                 <div class="imgbox">
                                     <img src="img/photo2.jpg" alt="">
                                     <div class="sbox">
