--- a/sweet.html
+++ b/sweet.html
@@ -81,6 +81,9 @@
                                 <div class="slide slide6">
                                     <div class="img"></div>
                                 </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
                             </div>
                         </div>
                     </div>
