--- a/party.html
+++ b/party.html
@@ -81,6 +81,15 @@
                                 <div class="slide slide6">
                                     <div class="img"></div>
                                 </div>
+                                <div class="slide slide7">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide8">
+                                    <div class="img"></div>
+                                </div>
+                                <div class="slide slide9">
+                                    <div class="img"></div>
+                                </div>
                             </div>
                         </div> 
                     </div>
